[package]
name = "cands_cyphal"
license = "MIT"
authors = ["DigitalServo"]
description = "This is a　packaged library for DigitalServo USB CAN board using Cyphal communication."
version = "0.1.5"
edition = "2021"

[features]
usb-ftdi = ["cands_interface/usb-ftdi"]
raspberrypi = ["cands_interface/raspberrypi"]
drvcan_v1 = []
drvcan_v2 = []

[dependencies]
cands_presentation = {path = "../cands-presentation"}
cands_transport = {path = "../cands-transport"}
cands_interface = {path = "../cands-interface"}
async-io = "2.3.4"
futures-lite = "2.3.0"
